--- a/2001202045-VuNgoDat-THCTDL-Buoi7/2001202045-VuNgoDat-THCTDL-Buoi7.vcxproj
+++ b/2001202045-VuNgoDat-THCTDL-Buoi7/2001202045-VuNgoDat-THCTDL-Buoi7.vcxproj
@@ -139,13 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BRTree.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BRTree.h" />
     <ClInclude Include="PhanSo.h" />
     <ClInclude Include="SinhVien.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="menu.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
