--- a/2001202045-VuNgoDat-THCTDL-Buoi7/2001202045-VuNgoDat-THCTDL-Buoi7.vcxproj.filters
+++ b/2001202045-VuNgoDat-THCTDL-Buoi7/2001202045-VuNgoDat-THCTDL-Buoi7.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="Source.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="BRTree.cpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SinhVien.h">
@@ -32,5 +29,10 @@
     <ClInclude Include="BRTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="menu.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
