--- a/2001202045-VuNgoDat-THCTDL-Buoi7/2001202045-VuNgoDat-THCTDL-Buoi7.vcxproj.filters
+++ b/2001202045-VuNgoDat-THCTDL-Buoi7/2001202045-VuNgoDat-THCTDL-Buoi7.vcxproj.filters
@@ -29,9 +29,15 @@
     <ClInclude Include="BRTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PrintTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="menu.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="PhanSo.txt">
       <Filter>Resource Files</Filter>
     </Text>
   </ItemGroup>
